src-tauri/check_output_3.txt
    Blocking waiting for file lock on package cache
    Updating crates.io index
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking FontCluster v0.1.2 (/Users/mugisus/Documents/GitHub/fontcluster/src-tauri)
error[E0432]: unresolved import `umap`
 --> src/core/mapper.rs:6:5
  |
6 | use umap::Umap;
  |     ^^^^ use of unresolved module or unlinked crate `umap`
  |
  = help: if you wanted to use a crate named `umap`, use `cargo add umap` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `FontCluster` (lib) due to 1 previous error
